src/objects/QPMS__Administrative_information__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Address_complement_Manufacturer__c</fullName>
        <description>Address complement</description>
        <inlineHelpText>Address complement</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Address_complement_Submitter__c</fullName>
        <description>Address complement</description>
        <inlineHelpText>Address complement</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Address_complement_authorized__c</fullName>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__All_other_reportable_incidents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All other re portable incidents</description>
        <label>All other reportable incidents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorization_representative_org_name__c</fullName>
        <description>Authorization representative organization name</description>
        <inlineHelpText>Authorization representative organization name</inlineHelpText>
        <label>Authorization representative org name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Representative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authorized Representative</description>
        <label>Authorized Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__City_name_Manufacturer__c</fullName>
        <description>City name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__City_name_Submitter__c</fullName>
        <description>City name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__City_name_authorized__c</fullName>
        <description>City name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Combined_initial_and_final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Combined initial and final</description>
        <label>Combined initial and final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <description>Complaint Id</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <inlineHelpText>Complaint Id</inlineHelpText>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_first_name_Manufacturer__c</fullName>
        <description>Contact’s first name</description>
        <inlineHelpText>Contact’s first name</inlineHelpText>
        <label>Contact’s first name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_first_name_Submitter__c</fullName>
        <description>Contact’s first name</description>
        <inlineHelpText>Contact’s first name</inlineHelpText>
        <label>Contact’s first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_first_name_authorized__c</fullName>
        <description>Contact’s first name</description>
        <inlineHelpText>Contact’s first name</inlineHelpText>
        <label>Contact’s first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_last_name_Manufacturer__c</fullName>
        <description>Contact’s last name</description>
        <inlineHelpText>Contact’s last name</inlineHelpText>
        <label>Contact’s last name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_last_name_Submitter__c</fullName>
        <description>Contact’s last name</description>
        <inlineHelpText>Contact’s last name</inlineHelpText>
        <label>Contact’s last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_last_name_authorized__c</fullName>
        <description>Contact’s last name</description>
        <inlineHelpText>Contact’s last name</inlineHelpText>
        <label>Contact’s last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country_Manufacturer__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country_Submitter__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country_authorized__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_incident_To__c</fullName>
        <description>Date of incident</description>
        <inlineHelpText>Date of incident</inlineHelpText>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_incident__c</fullName>
        <description>Date of incident</description>
        <label>Date of incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_submission__c</fullName>
        <description>Date of submission</description>
        <label>Date of submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Death</description>
        <label>Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__EUDAMED_number_of_NCA__c</fullName>
        <description>EUDAMED number of NCA</description>
        <label>EUDAMED number of NCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__EUDAMED_s_FSCA_reference_number__c</fullName>
        <description>EUDAMED&apos;s FSCA reference number</description>
        <label>EUDAMED&apos;s FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__EUDAMED_s_reference_number__c</fullName>
        <description>EUDAMED&apos;s reference number</description>
        <label>EUDAMED&apos;s reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Manufacturer__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Submitter__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_authorized__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Eudamed_ID_of_PMCF_PMPF_Investigation__c</fullName>
        <label>Eudamed ID of PMCF/PMPF Investigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Expected_Date_Of_The_Next_Report__c</fullName>
        <description>Expected Date Of The Next Report</description>
        <label>Expected Date Of The Next Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Final_Non_reportable_incident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Final (Non-reportable incident)</description>
        <label>Final (Non-reportable incident)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Final_Reportable_incident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Final (Reportable incident)</description>
        <label>Final (Reportable incident)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>followup number</description>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow up</description>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial</description>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manufacturer</description>
        <label>Manufacturer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_awareness_date__c</fullName>
        <description>Manufacturer awareness date</description>
        <inlineHelpText>Manufacturer awareness date</inlineHelpText>
        <label>Manufacturer awareness date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_organisation_name__c</fullName>
        <description>Manufacturer organisation name</description>
        <inlineHelpText>Manufacturer organisation name</inlineHelpText>
        <label>Manufacturer organisation name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_s_FSCA_reference_number__c</fullName>
        <description>Manufacturer&apos;s FSCA reference number</description>
        <label>Manufacturer&apos;s FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_s_reference_number__c</fullName>
        <description>Manufacturer&apos;s reference number for this incident</description>
        <label>Manufacturer&apos;s reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_s_reference_number_incident__c</fullName>
        <description>Manufacturer&apos;s reference number for this incident</description>
        <label>Manufacturer&apos;s reference number incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NCA_s_local_FSCA_reference_number__c</fullName>
        <description>NCA&apos;s local FSCA reference number</description>
        <label>NCA&apos;s local FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NCA_s_local_reference_number__c</fullName>
        <description>NCA&apos;s local reference number</description>
        <label>NCA&apos;s local reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Name_of_receiving_national_competent_aut__c</fullName>
        <description>Name of receiving national competent authority</description>
        <label>Name of receiving national competent aut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Other_please_specify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other, please specify</description>
        <label>Other, please specify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Box_Manufacturer__c</fullName>
        <description>PO Box</description>
        <inlineHelpText>PO Box</inlineHelpText>
        <label>PO Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Box_Submitter__c</fullName>
        <description>PO Box</description>
        <inlineHelpText>PO Box</inlineHelpText>
        <label>PO Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Box_authorized__c</fullName>
        <description>PO Box</description>
        <inlineHelpText>PO Box</inlineHelpText>
        <label>PO Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Periodic_Summary_Report_PSR_ID__c</fullName>
        <description>Periodic Summary Report (PSR) ID</description>
        <label>Periodic Summary Report (PSR) ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_Manufacturer__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_Submitter__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_authorized__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Postal_code_Manufacturer__c</fullName>
        <description>Postal code</description>
        <inlineHelpText>Postal code</inlineHelpText>
        <label>Postal code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Postal_code_Submitter__c</fullName>
        <description>Postal code</description>
        <inlineHelpText>Postal code</inlineHelpText>
        <label>Postal code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Postal_code_authorized__c</fullName>
        <description>Postal code</description>
        <inlineHelpText>Postal code</inlineHelpText>
        <label>Postal code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Reference_number_assigned_by_EUDAMED__c</fullName>
        <description>Reference number assigned by EUDAMED for this incident</description>
        <label>Reference number assigned by EUDAMED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reference_number_assigned_by_NCA__c</fullName>
        <description>Reference number assigned by NCA for this incident</description>
        <label>Reference number assigned by NCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Registered_commercial_name_of_company__c</fullName>
        <description>Registered commercial name of company</description>
        <inlineHelpText>Registered commercial name of company</inlineHelpText>
        <label>Registered commercial name of company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>Regulatory Report Body</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds Regulatory Report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Administrative informations</relationshipLabel>
        <relationshipName>Administrative_informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Serious_public_health_threat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious public health threat</description>
        <label>Serious public health threat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Single_Registration_Number_Authorized__c</fullName>
        <description>Single Registration Number</description>
        <inlineHelpText>Single Registration Number</inlineHelpText>
        <label>Single Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Single_registration_number_Manufacturer__c</fullName>
        <description>Single registration number</description>
        <inlineHelpText>Single registration number</inlineHelpText>
        <label>Single registration number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_Authorized__c</fullName>
        <description>Street</description>
        <inlineHelpText>Street</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_Manufacturer__c</fullName>
        <description>Street</description>
        <inlineHelpText>Street</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_Submitter__c</fullName>
        <description>Street</description>
        <inlineHelpText>Street</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_number_Manufacturer__c</fullName>
        <description>Street number</description>
        <inlineHelpText>Street number</inlineHelpText>
        <label>Street number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_number_Submitter__c</fullName>
        <description>Street number</description>
        <inlineHelpText>Street number</inlineHelpText>
        <label>Street number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_number_authorized__c</fullName>
        <description>Street number</description>
        <inlineHelpText>Street number</inlineHelpText>
        <label>Street number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Unanticipated_serious_deterioration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unanticipated serious deterioration in state of health</description>
        <label>Unanticipated serious deterioration</label>
        <type>Checkbox</type>
    </fields>
    <label>Administrative information</label>
    <nameField>
        <label>Administrative information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administrative informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>